# miniature-fishstick

./: .gitignore  .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml  requirements-dev.txt  thesis_analysis.ipynb
.github/workflows/: tests.yml
docs/: run-management.md  run_management.md
fraud-eo-narratives/: README.md
hooks/: pre-commit
notebooks/reports/: thesis_analysis_full.ipynb
notes/: 2026-03-05_lgbm_baseline.md  2026-03-06_eo_v0.md
output/: eval_summary_all.json  narratives_engineering_debug_llm.jsonl  narratives_engineering_debug_llm.jsonl.txt  narratives_engineering_debug_template.jsonl  narratives_governance_audit_llm.jsonl  narratives_governance_audit_llm.jsonl.txt  narratives_governance_audit_template.jsonl.txt  narratives_ops_triage_llm.jsonl  narratives_ops_triage_llm.jsonl.txt  narratives_ops_triage_template.jsonl.txt
output/thesis_tables/: baseline_metrics.csv  (+17 more)
scripts/: attach_shap_drivers_v1.py  emit_eos_v1.py  eval_driver_leakage_v1.py  eval_driver_overlap_v1.py  eval_driver_sign_faithfulness_v1.py  eval_thin_thick_v1.py  filter_thinfile_narratives.py  fix_and_filter_thinfile_eo.py  generate_template_narratives_v1.py  generate_template_narratives_v1_TEST.py  make_joined_train_head.py  make_split_v1.py  materialize_joined_train.py  orchestrate_evaluation.py  orchestrate_llm_narratives.py  orchestrate_narrative_experiments.py  report_baseline_metrics_v1.py  run_pipeline.py  smoke_load_ieee.py  train_lgbm_numeric_v1.py  validate_jsonl.py
tests/: test_data_cache_loader.py  test_ieee_cis_paths.py  test_run_manager.py  test_runs.py
(+28 files in other folders)
