[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-thesis"
version = "0.1.0"
description = "Run management utilities for thesis experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fraud-thesis = "fraud_thesis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]