[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud-thesis"
version = "0.1.0"
description = "Run management utilities for thesis experiments"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas>=2.2",
]

[project.scripts]
fraud-thesis = "fraud_thesis.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]